# LenkoBot

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  config.example.toml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/acceptance/: phase-2.5-voice-corpus.md
docs/analysis/: README.md  github-actions-python-uv-ci-2026-07.md  memory-personas.md  oauth-secure-backend.md  phase2-export-and-structured-output-2026-07.md  phase3-recurrence-dst-2026-07.md  telegram-gateway.md  telethon-e2e.md  web-auth-2026-07.md  web-search-options-2026-07.md  xai-oauth.md  xai-responses.md
docs/architecture/: implementation-notes.md  mvp-spec.md  product-roadmap-todo.md  product-roadmap.md  security-model.md  upstream-use.md
examples/: config.minimal.toml
src/lenkobot/: __init__.py  __main__.py  action_confirmation.py  aiogram_adapter.py  application_service.py  context_builder.py  encrypted_export.py  live_smoke.py  memory.py  memory_extraction.py  oauth_credentials.py  persona_store.py  personas.py  reminder_parser.py  reminder_schedule.py  reminder_store.py  reminder_worker.py  reset_coordinator.py  runtime.py  session_deletion.py  session_store.py  session_summary.py  sqlite_schema.py  telegram_e2e.py  telegram_e2e_credentials.py  telegram_presentation.py  telethon_e2e.py  (+3 more)
tests/: test_action_confirmation.py  test_aiogram_adapter.py  test_application_service.py  test_context_builder.py  test_encrypted_export.py  test_live_smoke.py  test_memory_extraction.py  test_memory_store.py  test_oauth_credentials.py  test_oauth_lifecycle.py  test_phase_two_point_five.py  test_project_metadata.py  test_reminder_application.py  test_reminder_outbox.py  test_reminder_parser.py  test_reminder_schedule.py  test_reminder_store.py  test_reminder_worker.py  test_reset_coordinator.py  test_runtime.py  test_session_deletion.py  test_session_store.py  test_session_summary.py  test_sqlite_schema.py  test_telegram_e2e.py  test_telegram_e2e_credentials.py  test_telegram_presentation.py  test_telegram_router.py  test_telethon_e2e.py  test_web_search.py  test_xai_provider.py
