[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "lenkobot"
version = "0.0.0"
description = "Personal Telegram companion bot"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiogram==3.29.1",
    "ddgs==9.14.4",
]

[project.optional-dependencies]
e2e = ["telethon==1.44.0"]

[project.scripts]
lenkobot = "lenkobot.runtime:main"

[dependency-groups]
dev = ["pytest==8.3.5"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
